// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRadio should render correctly 1`] = `
<label
  className="bpk-radio"
>
  <input
    aria-invalid={false}
    aria-label="Direct"
    className="bpk-radio__input"
    disabled={false}
    name="radio"
    type="radio"
  />
  <div
    className="bpk-radio__circle"
  />
  <span
    aria-hidden="true"
  >
    Direct
  </span>
</label>
`;

exports[`BpkRadio should render correctly when invalid 1`] = `
<label
  className="bpk-radio bpk-radio--invalid"
>
  <input
    aria-invalid={true}
    aria-label="Direct"
    className="bpk-radio__input"
    disabled={false}
    name="radio"
    type="radio"
    value="my-value"
  />
  <div
    className="bpk-radio__circle"
  />
  <span
    aria-hidden="true"
  >
    Direct
  </span>
</label>
`;

exports[`BpkRadio should render correctly when label is a node 1`] = `
<label
  className="bpk-radio"
>
  <input
    aria-invalid={false}
    aria-label={
      <span>
        Direct
      </span>
    }
    className="bpk-radio__input"
    disabled={false}
    name="radio"
    type="radio"
  />
  <div
    className="bpk-radio__circle"
  />
  <span
    aria-hidden="true"
  >
    <span>
      Direct
    </span>
  </span>
</label>
`;

exports[`BpkRadio should render correctly with ariaLabel attribute 1`] = `
<label
  className="bpk-radio"
>
  <input
    aria-invalid={false}
    aria-label="Is this direct"
    className="bpk-radio__input"
    disabled={false}
    id="radio"
    name="radio"
    type="radio"
  />
  <div
    className="bpk-radio__circle"
  />
  <span
    aria-hidden="true"
  >
    Direct
  </span>
</label>
`;

exports[`BpkRadio should render correctly with checked attribute 1`] = `
<label
  className="bpk-radio"
>
  <input
    aria-invalid={false}
    aria-label="Direct"
    checked={true}
    className="bpk-radio__input"
    disabled={false}
    name="radio"
    type="radio"
  />
  <div
    className="bpk-radio__circle"
  />
  <span
    aria-hidden="true"
  >
    Direct
  </span>
</label>
`;

exports[`BpkRadio should render correctly with disabled attribute 1`] = `
<label
  className="bpk-radio bpk-radio--disabled"
>
  <input
    aria-invalid={false}
    aria-label="Direct"
    className="bpk-radio__input"
    disabled={true}
    name="radio"
    type="radio"
  />
  <div
    className="bpk-radio__circle"
  />
  <span
    aria-hidden="true"
  >
    Direct
  </span>
</label>
`;

exports[`BpkRadio should render correctly with id attribute 1`] = `
<label
  className="bpk-radio"
>
  <input
    aria-invalid={false}
    aria-label="Direct"
    className="bpk-radio__input"
    disabled={false}
    id="radio"
    name="radio"
    type="radio"
  />
  <div
    className="bpk-radio__circle"
  />
  <span
    aria-hidden="true"
  >
    Direct
  </span>
</label>
`;

exports[`BpkRadio should render correctly with value attribute 1`] = `
<label
  className="bpk-radio"
>
  <input
    aria-invalid={false}
    aria-label="Direct"
    className="bpk-radio__input"
    disabled={false}
    name="radio"
    type="radio"
    value="my-value"
  />
  <div
    className="bpk-radio__circle"
  />
  <span
    aria-hidden="true"
  >
    Direct
  </span>
</label>
`;

exports[`BpkRadio should render correctly with white attribute 1`] = `
<label
  className="bpk-radio bpk-radio--white"
>
  <input
    aria-invalid={false}
    aria-label="Direct"
    className="bpk-radio__input"
    disabled={false}
    name="radio"
    type="radio"
  />
  <div
    className="bpk-radio__circle"
  />
  <span
    aria-hidden="true"
  >
    Direct
  </span>
</label>
`;
